Fixed styling on medofficetemplate, finished base form of twitch clipper

--- a/src/components/MedOfficeTemplate.css
+++ b/src/components/MedOfficeTemplate.css
@@ -99,7 +99,7 @@
   color: black;
   text-align: center;
   position: relative;
-  top: 56px;
+  top: 156px;
   z-index: 0;
   width: 100%;
   display: flex;
@@ -153,7 +153,7 @@
 .medOfficeFooter {
   height: 120px;
   background-image: linear-gradient(#000000, #000000, #101010);
-  margin-top: 56px;
+  margin-top: 156px;
   color: white;
   display: flex;
   justify-content: center;
