--- a/src/components/TwitchClipper.css
+++ b/src/components/TwitchClipper.css
@@ -21,4 +21,37 @@
 
 .clipListContainer {
   background-color: white;
+  border: 1px solid black;
+  border-radius: 5px;
+  margin-top: 20px;
+}
+
+.clipListContainer a {
+  color: black;
+  text-decoration: none;
+}
+
+.twitchThumbnail {
+  width: 80%;
+  vertical-align: middle;
+}
+
+.twitchClipItem {
+  padding: 5px;
+  font-size: 10pt;
+  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.twitchClipItem span {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  vertical-align: middle;
+}
+
+.twitchClipItem:hover {
+  background-color: #333333;
 }
